fix: align center menu items

--- a/src/app/components/screen/screen.component.scss
+++ b/src/app/components/screen/screen.component.scss
@@ -41,6 +41,8 @@
         width: 100%;
         height: 100%;
         padding: 8px;
+        display: flex;
+        align-items: center;
         .image{
           display: flex;
           justify-content: center;
